server dev-prod test

--- a/Server/Jenkinsfile
+++ b/Server/Jenkinsfile
@@ -47,6 +47,8 @@ spec:
             // build docker image
             sh """
             cd LoL-MBTI/Server
+            pwd
+            ls
             docker build -t \$PROJECT_NAME .
             """
           }
