--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -25,3 +25,4 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        dockerfile: ../../Server/src/Dockerfile
