--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -18,6 +18,12 @@ jobs:
       with:
         go-version: 1.17
 
+    - name: Check pwd
+      run: pwd
+
+    - name: ls
+      run: ls
+
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
@@ -25,4 +31,4 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        dockerfile: ../../Server/src/Dockerfile
+        dockerfile: ~/Server/src/Dockerfile
