--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -31,4 +31,4 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        dockerfile: ~/Server/src/Dockerfile
+        dockerfile: Server/src/Dockerfile
