--- a/Server/src/Dockerfile
+++ b/Server/src/Dockerfile
@@ -9,9 +9,7 @@ WORKDIR /app
 
 COPY . .
 
-RUN go mod init github.com/LoL-MBTI
-
-RUN go mod tidy
+RUN go mod download
 
 RUN go build -o ./server .
 
