--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -26,3 +26,4 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         dockerfile: Server/src/Dockerfile
+        tags: latest
