--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -22,8 +22,8 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
         image: ejb0329/mbti-server
+        tag: latest
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         dockerfile: Server/src/Dockerfile
-        addLatest: true
